my-apps/productivity/mealie/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mealie
  namespace: mealie
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Mealie"
    gethomepage.dev/group: "Productivity"
    gethomepage.dev/icon: "mdi-silverware-fork-knife"
    gethomepage.dev/href: "https://mealie.serverops.live"
    gethomepage.dev/pod-selector: "app=mealie"
spec:
  hostnames:
    - mealie.serverops.live
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: gateway-internal
      namespace: gateway
      sectionName: https
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: mealie
          port: 80
          weight: 1
